--- a/WebApi/wwwroot/html/Home.html
+++ b/WebApi/wwwroot/html/Home.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jewelry Store</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../pictures/9.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../css/all.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 
     <link rel="stylesheet" href="../css/Home.css" />
 </head>
@@ -14,7 +15,8 @@
 <body>
     <!-- Header -->
     <header class="bg-dark text-light text-center py-4">
-        <h1 class="mb-0">Jewelry Store</h1>
+        <h1 class="mb-0"><!--💎-->💍Jewelry Store</h1>
+        <p id="helloUser"> שלום </p>
     </header>
 
     <!-- Navbar -->
@@ -26,9 +28,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../html/Home.html">Users</a></li>
                 </ul>
             </div>
         </div>
@@ -43,10 +44,7 @@
         <p class="mb-0">&copy; 2025 Jewelry Store. All rights reserved.</p>
     </footer>
 
-    <!-- Bootstrap 5 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- <section>
+    <section>
         <h3>Add Jewelry</h3>
         <form id="add-form" onsubmit="addJewelry()">
             <input type="text" id="add-name" placeholder="Name" required />
@@ -81,7 +79,10 @@
             </tr>
         </thead>
         <tbody id="jewelry-list"></tbody>
-    </table> -->
+    </table>
+
+    <script src="../js/bootstrap.bundle.min.js"></script>
+
     <script src="https://kit.fontawesome.com/8f066012a0.js" crossorigin="anonymous"></script>
 
     <script src="../js/Home.js"></script>
