--- a/WebApi/wwwroot/html/Home.html
+++ b/WebApi/wwwroot/html/Home.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jewelry Store</title>
     <link rel="shortcut icon" href="../pictures/9.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/all.min.css">
+    <!-- <link rel="stylesheet" href="../css/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 
     <link rel="stylesheet" href="../css/Home.css" />
@@ -83,7 +85,7 @@
 
     <script src="../js/bootstrap.bundle.min.js"></script>
 
-    <script src="https://kit.fontawesome.com/8f066012a0.js" crossorigin="anonymous"></script>
+    <script src="../js/8f066012a0.js" crossorigin="anonymous"></script>
 
     <script src="../js/Home.js"></script>
 </body>
