--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -7,9 +7,11 @@
   <title>Jewelry Store</title>
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/all.min.css">
 
-  <script src="https://kit.fontawesome.com/8f066012a0.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <!-- <link rel="stylesheet" href="./css/all.min.css"> -->
+
+  <script src="./js/8f066012a0.js" crossorigin="anonymous"></script>
 
 </head>
 
