--- a/WebApi/wwwroot/html/Home.html
+++ b/WebApi/wwwroot/html/Home.html
@@ -12,17 +12,28 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 
     <link rel="stylesheet" href="../css/Home.css" />
+    <link rel="stylesheet" href="../css/all.css">
 </head>
 
 <body>
     <!-- Header -->
-    <header class="bg-dark text-light text-center py-4">
-        <h1 class="mb-0"><!--💎-->💍Jewelry Store</h1>
-        <p id="helloUser"> שלום </p>
+    <header class="text-light text-center py-4">
+        <div class="container d-flex align-items-center justify-content-between">
+            <!-- תמונת פרופיל בצד שמאל -->
+            <img id="profile-pic" src="#" alt="Profile Picture" class="rounded-circle border border-light shadow-lg">
+            <i id="i-user" class="fas fa-user" aria-hidden="true" style="display: none;"></i>
+            <p id="helloUser" class="lead" style="margin: 10px;">שלום</p>
+
+            <!-- טקסט מיושר לאמצע -->
+            <div class="flex-grow-1 text-center">
+                <h1 class="mb-2 fw-bold">Jewelry Store</h1>
+            </div>
+        </div>
     </header>
 
+
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">Jewelry Store</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -30,8 +41,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../html/Home.html">Users</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./Home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./Users.html">Users</a></li>
                 </ul>
             </div>
         </div>
