First try to run JWT and Google in the app.

--- a/WebApi/wwwroot/html/Home.html
+++ b/WebApi/wwwroot/html/Home.html
@@ -48,15 +48,6 @@
         </div>
     </nav>
 
-    <section id="products2" class="products container py-5">
-
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-light text-center py-3">
-        <p class="mb-0">&copy; 2025 Jewelry Store. All rights reserved.</p>
-    </footer>
-
     <section>
         <h3>Add Jewelry</h3>
         <form id="add-form" onsubmit="addJewelry()">
@@ -66,7 +57,18 @@
         </form>
     </section>
 
-    <section id="editForm" style="display: none">
+    <section id="products2" class="products container py-5">
+
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-light text-center py-3">
+        <p class="mb-0">&copy; 2025 Jewelry Store. All rights reserved.</p>
+    </footer>
+
+
+
+    <!-- <section id="editForm" style="display: none">
         <h3>Edit Jewelry</h3>
         <form onsubmit="updateJewelry()">
             <input type="hidden" id="edit-id" />
@@ -78,7 +80,7 @@
                 Cancel
             </button>
         </form>
-    </section>
+    </section> -->
 
     <p id="counter"></p>
 
