second try to do authorization with google

--- a/WebApi/wwwroot/index.html
+++ b/WebApi/wwwroot/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <!-- <link rel="stylesheet" href="./css/all.min.css"> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"> -->
+  <link rel="stylesheet" href="./css/all.min.css">
 
   <script src="./js/8f066012a0.js" crossorigin="anonymous"></script>
 
