--- a/WebApi/wwwroot/html/Home.html
+++ b/WebApi/wwwroot/html/Home.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="./Home.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./Users.html">Users</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./User.html">Users</a></li>
                 </ul>
             </div>
         </div>
